# haskells-game-of-life

./: CHANGELOG.md  LICENSE  README.md  haskells-game-of-life.cabal
app/: Main.hs
