cabal-version:      2.4
name:               haskells-game-of-life
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           github

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fabian
maintainer:         fabianlippold1184@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

executable haskells-game-of-life
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
        ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -threaded
